# takeoff-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start.sh
.claude/skills/stack-research/: SKILL.md
.claude/skills/test-assessment/: SKILL.md
api/: main.py
pipeline/: takeoff.py
samples/inputs/: RATINGS.md
tests/: test_pipeline.py
web/: index.html
